# Feagent

./: .env.example  .env.fullreal.example  .env.hybrid.example  .env.test.example  .gitignore  .import-linter.toml  .mcp.example.json  .pre-commit-config.yaml  CLAUDE.md  E2E_INTEGRATION_NOTES.md  LICENSE  Leaf  MANUAL_TEST_GUIDE.md  MOCK_CODE_PATCHES.md  MOCK_EXTERNAL_SERVICES_ANALYSIS.md  MOCK_EXTERNAL_SERVICES_SUMMARY.md  MOCK_QUICK_REFERENCE.md  PROJECT_RAG_COMPLETION_SUMMARY.md  README.md  Report.md  TESTING_ANALYSIS_SUMMARY.md  TESTING_DOCUMENTATION_INDEX.md  TESTING_DOCUMENTS_MANIFEST.txt  TESTING_QUICK_REFERENCE.md  WORKFLOW_CHAT_API_TEST.md  alembic.ini  coverage.json  coverage_output.txt  fix_tests.py  full_coverage.txt  next_actions_plan.md  phase2_conversation_agent_plan.md  pyproject.toml  pyrightconfig.json  snippet.py  test_chat.json  test_chat_api.py  test_chat_api_advanced.py  test_chat_stream.json  test_chromadb.py  (+19 more)
.augment/: phase_3_2_plan.md
.claude/: settings.local.json
.obsidian/: workspace.json
alembic/: env.py
config/: save_rules.example.json  save_rules.example.yaml
data/: agent_platform.db-journal  dirty_customers_payload.json
definitions/: README.md
docs/: ARCHITECTURE_GUIDE.md  Agent_Workflow_Conversion_Plan.md  CODE_CLEANUP_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_CLEANUP_GUIDE.md  E2E_Test_Guide.md  E2E_Test_Report_2025-12-01.md  RAG_SYSTEM_GUIDE.md  README.md  STEP6_COMPLETION_SUMMARY.md  V2规划与当前实现对标分析.md  WORKFLOW_CHAT_GUIDE.md  WORKFLOW_INTEGRATION_SUMMARY.md  WORKFLOW_MANUAL_TEST_GUIDE.md  agent_change  application_layer_implementation_summary.md  backend_changes_for_workflow.md  backend_setup_guide.md  deployment.md  develop_document.md  execution_summary.md  frontend_architecture_summary.md  frontend_setup_guide.md  langchain_integration_step3_summary.md  llm_configuration_summary.md  person_record.md  plan_generator_implementation_summary.md  plan_generator_usage_guide.md  three-high-test-plan.md  three-high-test-report.md  tools_implementation_summary.md  tools_usage_guide.md  workflow_conditions_and_collections_guide.md  workflow_conditions_and_collections_summary.md  workflow_documentation_index.md  workflow_frontend_design.md  workflow_requirements.md  基本流程md  开发规范.md  需求分析.md  (+2 more)
issues/: 2025-12-31_12-25-27-workflow-chat-create-unification.csv  2025-12-31_19-03-51-ddd-boundary-review-checklist.csv  2026-01-02_22-03-50-report-md-plan.csv  2026-01-03_16-16-12-workflow-convergence-v3.csv  2026-01-03_21-52-18-run-scheme-1-report-update.csv  2026-01-04_12-11-58-workflow-core-solution-plan.csv  2026-01-04_16-46-04-workflow-core-solution-plan.csv  2026-01-04_20-02-38-workflow-core-fixes.csv  2026-01-04_22-40-56-workflow-closed-loop.csv  2026-01-05_21-26-43-prd-mvp-acceptance.csv  2026-01-06_21-23-18-e2e-docs-review-test.csv  (+3 more)
src/: config.py  (+1 more)
(+1457 files in other folders)
